--- a/indexx.html
+++ b/indexx.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,10 +16,14 @@
     th {
         border: 1px solid black;
     }
+
+    .table1 {
+        margin-bottom: 50px;
+    }
 </style>
 
 <body>
-    <table>
+    <table class="table1">
         <tr>
             <th colspan="4">TITLE</th>
         </tr>
@@ -49,6 +54,33 @@
             <td colspan="2">sub subtitle</td>
 
         </tr>
+    </table>
+
+
+    <table>
+        <TR>
+            <TH rowspan="2">State of Health
+            <TH colspan="2">Fasting Value
+            <TH >After Eating
+        <TR>
+            <TH>Maximum
+            <TH>Maximum
+            <TH>2 hours after eating
+        <TR>
+            <TH>Heatlhy
+            <TD>70
+            <TD>100
+            <TD>Less than 140
+        <TR>
+            <TH>Pre-Diabetes
+            <TD>101
+            <TD>126
+            <TD>140 to 200
+        <TR>
+            <TH>Diabetes
+            <TD>More than 126
+            <TD>N/A
+            <TD>More than 200
     </table>
 </body>
 
